Fix image overflow

--- a/styles/view_message.css
+++ b/styles/view_message.css
@@ -16,8 +16,6 @@ body {
 }
 
 main{
-    max-width: 100vw;
-    max-height: 100vh;
     background-color: rgb(255,250,205);
     border-radius: 10px;
     margin: 10px 0 10px 0;
